clusters/k3s-home/apps/auth/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-http-route
  namespace: authentik
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
      sectionName: https
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - "authentik.fletcherlabs.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik
          port: 80
          weight: 1
